--- a/index.html
+++ b/index.html
@@ -1,2 +1,121 @@
-<h1>Nothing here yet!</h1>
-<p>Testing</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>John Doe - Curriculum Vitae</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <h1>John Doe</h1>
+        <p>Experienced Software Developer passionate about creating robust and scalable web applications.</p>
+        <address>
+            <p>Email: <a href="mailto:john.doe@email.com">john.doe@email.com</a></p>
+            <p>Phone: +1 (555) 123-4567</p>
+            <p>LinkedIn: <a href="https://www.linkedin.com/in/johndoe" target="_blank">linkedin.com/in/johndoe</a></p>
+            <p>GitHub: <a href="https://github.com/johndoe" target="_blank">github.com/johndoe</a></p>
+            <p>Portfolio: <a href="https://www.johndoevacations.com" target="_blank">johndoevacations.com</a></p>
+        </address>
+    </header>
+
+    <main>
+        <section id="summary">
+            ---
+            <h2>Summary</h2>
+            <p>Highly motivated and results-oriented Software Developer with 7 years of experience in full-stack web development. Proficient in JavaScript, Python, React, Node.js, and various cloud platforms. Proven ability to lead projects, mentor junior developers, and deliver high-quality software solutions on time and within budget.</p>
+        </section>
+
+        <section id="experience">
+            ---
+            <h2>Experience</h2>
+
+            <article>
+                <h3>Senior Software Engineer</h3>
+                <p class="company">Tech Solutions Inc. | New York, NY</p>
+                <p class="dates">January 2021 – Present</p>
+                <ul>
+                    <li>Led the development of a new customer relationship management (CRM) system, improving data processing efficiency by 30%.</li>
+                    <li>Mentored a team of 4 junior developers, fostering their growth and improving team productivity.</li>
+                    <li>Designed and implemented RESTful APIs using Node.js and Express, serving millions of requests daily.</li>
+                    <li>Collaborated with product managers and UX designers to translate business requirements into technical specifications.</li>
+                </ul>
+            </article>
+
+            <article>
+                <h3>Software Developer</h3>
+                <p class="company">Web Innovations LLC | San Francisco, CA</p>
+                <p class="dates">June 2018 – December 2020</p>
+                <ul>
+                    <li>Developed and maintained responsive web applications using React.js and Redux.</li>
+                    <li>Integrated third-party APIs for payment processing and analytics.</li>
+                    <li>Participated in code reviews and contributed to the continuous improvement of coding standards.</li>
+                    <li>Optimized database queries for a PostgreSQL database, reducing load times by 20%.</li>
+                </ul>
+            </article>
+        </section>
+
+        <section id="education">
+            ---
+            <h2>Education</h2>
+            <article>
+                <h3>Master of Science in Computer Science</h3>
+                <p class="institution">University of Technology | Boston, MA</p>
+                <p class="dates">September 2016 – May 2018</p>
+                <p><strong>Thesis:</strong> "Machine Learning Applications in Predictive Analytics"</p>
+            </article>
+            <article>
+                <h3>Bachelor of Science in Computer Engineering</h3>
+                <p class="institution">State University | Austin, TX</p>
+                <p class="dates">September 2012 – May 2016</p>
+            </article>
+        </section>
+
+        <section id="skills">
+            ---
+            <h2>Skills</h2>
+            <h3>Programming Languages:</h3>
+            <p>JavaScript (ES6+), Python, HTML5, CSS3, SQL</p>
+            <h3>Frameworks & Libraries:</h3>
+            <p>React.js, Node.js, Express.js, Redux, Django, Flask, jQuery, Bootstrap</p>
+            <h3>Databases:</h3>
+            <p>PostgreSQL, MongoDB, MySQL, Redis</p>
+            <h3>Cloud Platforms:</h3>
+            <p>AWS (EC2, S3, Lambda, RDS), Google Cloud Platform (GCP)</p>
+            <h3>Tools & Methodologies:</h3>
+            <p>Git, Docker, Kubernetes, Jest, Enzyme, Agile, Scrum, CI/CD</p>
+        </section>
+
+        <section id="projects">
+            ---
+            <h2>Projects</h2>
+            <article>
+                <h3>E-commerce Platform Redesign</h3>
+                <p class="description">Led the frontend redesign of an existing e-commerce platform, resulting in a 15% increase in user engagement and 10% increase in conversion rates.</p>
+                <p class="technologies"><strong>Technologies:</strong> React, Redux, Sass, RESTful API</p>
+                <p><a href="https://github.com/johndoe/ecommerce-redesign" target="_blank">View on GitHub</a></p>
+            </article>
+            <article>
+                <h3>Real-time Chat Application</h3>
+                <p class="description">Developed a real-time chat application with user authentication and persistent messaging using WebSockets.</p>
+                <p class="technologies"><strong>Technologies:</strong> Node.js, Express, Socket.io, MongoDB</p>
+                <p><a href="https://github.com/johndoe/chat-app" target="_blank">View on GitHub</a></p>
+            </article>
+        </section>
+
+        <section id="awards">
+            ---
+            <h2>Awards & Certifications</h2>
+            <ul>
+                <li>AWS Certified Solutions Architect – Associate (2023)</li>
+                <li>Dean's List, University of Technology (2017, 2018)</li>
+            </ul>
+        </section>
+    </main>
+
+    <footer>
+        ---
+        <p>&copy; 2025 John Doe. All rights reserved.</p>
+    </footer>
+</body>
+</html>
