added education and work

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>John Doe - Curriculum Vitae</title>
+    <title>Hannes Månsson</title>
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Google Fonts - Inter -->
@@ -35,14 +35,16 @@
 
         <!-- Header Section -->
         <header class="bg-gradient-to-r from-blue-600 to-blue-800 text-white p-8 sm:p-10 text-center rounded-t-xl">
-            <h1 class="text-4xl sm:text-5xl font-bold mb-2 tracking-tight">John Doe</h1>
-            <p class="text-lg sm:text-xl font-light opacity-90">Experienced Software Developer passionate about creating robust and scalable web applications.</p>
+            <h1 class="text-4xl sm:text-5xl font-bold mb-2 tracking-tight">Hannes Månsson</h1>
+            <p class="text-lg sm:text-xl font-light opacity-90">
+                <!-- Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa quas vitae magni pariatur quia debitis, beatae quod, exercitationem veritatis nulla qui fugit aliquam nesciunt, nemo quibusdam facilis! Facilis, nesciunt tenetur. -->
+            </p>
             <address class="not-italic mt-6 text-sm sm:text-base opacity-90">
-                <p class="mb-1">Email: <a href="mailto:john.doe@email.com" class="hover:underline">john.doe@email.com</a></p>
-                <p class="mb-1">Phone: +1 (555) 123-4567</p>
-                <p class="mb-1">LinkedIn: <a href="https://www.linkedin.com/in/johndoe" target="_blank" class="hover:underline">linkedin.com/in/johndoe</a></p>
-                <p class="mb-1">GitHub: <a href="https://github.com/johndoe" target="_blank" class="hover:underline">github.com/johndoe</a></p>
-                <p>Portfolio: <a href="https://www.johndoevacations.com" target="_blank" class="hover:underline">johndoevacations.com</a></p>
+                <p class="mb-1">Email: <a href="mailto:hannes.mansson01@gmail.com" class="hover:underline">hannes.mansson01@gmail.com</a></p>
+                <!-- <p class="mb-1">Phone: +1 (555) 123-4567</p> -->
+                <p class="mb-1">LinkedIn: <a href="https://se.linkedin.com/in/hannes-mansson" target="_blank" class="hover:underline">se.linkedin.com/in/hannes-mansson</a></p>
+                <p class="mb-1">GitHub: <a href="https://github.com/pajserman" target="_blank" class="hover:underline">github.com/pajserm</a></p>
+                <!-- <p>Portfolio: <a href="https://www.johndoevacations.com" target="_blank" class="hover:underline">johndoevacations.com</a></p> -->
             </address>
         </header>
 
@@ -51,7 +53,7 @@
             <section id="summary" class="mb-8 pb-6 border-b border-gray-200">
                 <h2 class="text-2xl sm:text-3xl font-semibold text-blue-700 mb-4 pb-2 border-b-2 border-blue-200">Summary</h2>
                 <p class="text-base sm:text-lg text-gray-700 leading-relaxed">
-                    Highly motivated and results-oriented Software Developer with 7 years of experience in full-stack web development. Proficient in JavaScript, Python, React, Node.js, and various cloud platforms. Proven ability to lead projects, mentor junior developers, and deliver high-quality software solutions on time and within budget.
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Itaque quas dolore nam iste doloremque voluptates maiores excepturi quasi saepe sequi doloribus temporibus, magnam, similique qui vel illum impedit assumenda ut.
                 </p>
             </section>
 
@@ -60,43 +62,44 @@
                 <h2 class="text-2xl sm:text-3xl font-semibold text-blue-700 mb-4 pb-2 border-b-2 border-blue-200">Experience</h2>
 
                 <article class="mb-6 last:mb-0 p-4 bg-gray-50 rounded-lg shadow-sm hover:shadow-md transition-shadow duration-200">
-                    <h3 class="text-xl sm:text-2xl font-semibold text-gray-900">Senior Software Engineer</h3>
-                    <p class="text-blue-600 font-medium text-sm sm:text-base">Tech Solutions Inc. | New York, NY</p>
-                    <p class="text-gray-500 text-xs sm:text-sm mb-3">January 2021 – Present</p>
+                    <h3 class="text-xl sm:text-2xl font-semibold text-gray-900">Teaching assistant (amanuens) at Department of Computer Science</h3>
+                    <p class="text-blue-600 font-medium text-sm sm:text-base">Lunds Tekniska Högskola | Lund</p>
+                    <p class="text-gray-500 text-xs sm:text-sm mb-3">January 2025 – Present</p>
                     <ul class="list-disc list-inside space-y-2 text-gray-700 text-sm sm:text-base">
-                        <li>Led the development of a new customer relationship management (CRM) system, improving data processing efficiency by 30%.</li>
-                        <li>Mentored a team of 4 junior developers, fostering their growth and improving team productivity.</li>
-                        <li>Designed and implemented RESTful APIs using Node.js and Express, serving millions of requests daily.</li>
-                        <li>Collaborated with product managers and UX designers to translate business requirements into technical specifications.</li>
+                        <li>Focusing mainly on the beginners course in Python</li>
+                        <li>Examening the student on mandatory excercises</li>
+                        <li>Present at excercises</li>                        
                     </ul>
                 </article>
 
                 <article class="mb-6 last:mb-0 p-4 bg-gray-50 rounded-lg shadow-sm hover:shadow-md transition-shadow duration-200">
-                    <h3 class="text-xl sm:text-2xl font-semibold text-gray-900">Software Developer</h3>
-                    <p class="text-blue-600 font-medium text-sm sm:text-base">Web Innovations LLC | San Francisco, CA</p>
-                    <p class="text-gray-500 text-xs sm:text-sm mb-3">June 2018 – December 2020</p>
+                    <h3 class="text-xl sm:text-2xl font-semibold text-gray-900">Teaching assistant (amanuens) at Department of  Electrical and Information Technology</h3>
+                    <p class="text-blue-600 font-medium text-sm sm:text-base">Lunds Tekniska Högskola | Lund</p>
+                    <p class="text-gray-500 text-xs sm:text-sm mb-3">September 2024 – November 2024</p>
                     <ul class="list-disc list-inside space-y-2 text-gray-700 text-sm sm:text-base">
-                        <li>Developed and maintained responsive web applications using React.js and Redux.</li>
-                        <li>Integrated third-party APIs for payment processing and analytics.</li>
-                        <li>Participated in code reviews and contributed to the continuous improvement of coding standards.</li>
-                        <li>Optimized database queries for a PostgreSQL database, reducing load times by 20%.</li>
+                        <li>Assistant in the course <i>Design of Digital Circuits - A Systems Approach (EITF65)</i></li>
+                        <li>Examening the student on mandatory excercises</li>
+                     
                     </ul>
                 </article>
+
+                
             </section>
 
             <!-- Education Section -->
             <section id="education" class="mb-8 pb-6 border-b border-gray-200">
                 <h2 class="text-2xl sm:text-3xl font-semibold text-blue-700 mb-4 pb-2 border-b-2 border-blue-200">Education</h2>
                 <article class="mb-6 last:mb-0 p-4 bg-gray-50 rounded-lg shadow-sm hover:shadow-md transition-shadow duration-200">
-                    <h3 class="text-xl sm:text-2xl font-semibold text-gray-900">Master of Science in Computer Science</h3>
-                    <p class="text-blue-600 font-medium text-sm sm:text-base">University of Technology | Boston, MA</p>
-                    <p class="text-gray-500 text-xs sm:text-sm mb-2">September 2016 – May 2018</p>
-                    <p class="text-gray-700 text-sm sm:text-base"><strong>Thesis:</strong> "Machine Learning Applications in Predictive Analytics"</p>
+                    <h3 class="text-xl sm:text-2xl font-semibold text-gray-900">Master of Science in Electrical Engineering</h3>
+                    <p class="text-blue-600 font-medium text-sm sm:text-base">Lunds Tekniska Högskola | Lund</p>
+                    <p class="text-gray-500 text-xs sm:text-sm mb-2">2022 – 2027</p>
+                    <!-- <p class="text-gray-700 text-sm sm:text-base"><strong>Thesis:</strong> "Machine Learning Applications in Predictive Analytics"</p> -->
                 </article>
                 <article class="mb-6 last:mb-0 p-4 bg-gray-50 rounded-lg shadow-sm hover:shadow-md transition-shadow duration-200">
-                    <h3 class="text-xl sm:text-2xl font-semibold text-gray-900">Bachelor of Science in Computer Engineering</h3>
-                    <p class="text-blue-600 font-medium text-sm sm:text-base">State University | Austin, TX</p>
-                    <p class="text-gray-500 text-xs sm:text-sm">September 2012 – May 2016</p>
+                    <h3 class="text-xl sm:text-2xl font-semibold text-gray-900">Statistics & Economy</h3>
+                    <p class="text-blue-600 font-medium text-sm sm:text-base">School of Economics and Management | Lund</p>
+                    <p class="text-gray-500 text-xs sm:text-sm"> January 2021 – June 2022</p>
+                    <p class="text-gray-700 text-sm sm:text-base">Stand-alone courses consisting mainly of statistics (49 hp) and some economics (30 hp)</p>
                 </article>
             </section>
 
@@ -106,11 +109,11 @@
                 <div class="space-y-4">
                     <div>
                         <h3 class="text-lg sm:text-xl font-medium text-gray-900 mb-1">Programming Languages:</h3>
-                        <p class="text-gray-700 text-sm sm:text-base">JavaScript (ES6+), Python, HTML5, CSS3, SQL</p>
+                        <p class="text-gray-700 text-sm sm:text-base">Python, Java, R, Javascript, Arduino (C/C++), SQL</p>
                     </div>
                     <div>
                         <h3 class="text-lg sm:text-xl font-medium text-gray-900 mb-1">Frameworks & Libraries:</h3>
-                        <p class="text-gray-700 text-sm sm:text-base">React.js, Node.js, Express.js, Redux, Django, Flask, jQuery, Bootstrap</p>
+                        <p class="text-gray-700 text-sm sm:text-base">Node.js, Express.js, Svelte.js, React.js, jQuery, Bootstrap, TailwindCSS</p>
                     </div>
                     <div>
                         <h3 class="text-lg sm:text-xl font-medium text-gray-900 mb-1">Databases:</h3>
