--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <p class="mb-1">Email: <a href="mailto:hannes.mansson01@gmail.com" class="hover:underline">hannes.mansson01@gmail.com</a></p>
                 <!-- <p class="mb-1">Phone: +1 (555) 123-4567</p> -->
                 <p class="mb-1">LinkedIn: <a href="https://se.linkedin.com/in/hannes-mansson" target="_blank" class="hover:underline">se.linkedin.com/in/hannes-mansson</a></p>
-                <p class="mb-1">GitHub: <a href="https://github.com/pajserman" target="_blank" class="hover:underline">github.com/pajserm</a></p>
+                <p class="mb-1">GitHub: <a href="https://github.com/pajserman" target="_blank" class="hover:underline">github.com/pajserman</a></p>
                 <!-- <p>Portfolio: <a href="https://www.johndoevacations.com" target="_blank" class="hover:underline">johndoevacations.com</a></p> -->
             </address>
         </header>
@@ -116,22 +116,14 @@
                         <p class="text-gray-700 text-sm sm:text-base">Node.js, Express.js, Svelte.js, React.js, jQuery, Bootstrap, TailwindCSS</p>
                     </div>
                     <div>
-                        <h3 class="text-lg sm:text-xl font-medium text-gray-900 mb-1">Databases:</h3>
-                        <p class="text-gray-700 text-sm sm:text-base">PostgreSQL, MongoDB, MySQL, Redis</p>
-                    </div>
-                    <div>
-                        <h3 class="text-lg sm:text-xl font-medium text-gray-900 mb-1">Cloud Platforms:</h3>
-                        <p class="text-gray-700 text-sm sm:text-base">AWS (EC2, S3, Lambda, RDS), Google Cloud Platform (GCP)</p>
-                    </div>
-                    <div>
-                        <h3 class="text-lg sm:text-xl font-medium text-gray-900 mb-1">Tools & Methodologies:</h3>
-                        <p class="text-gray-700 text-sm sm:text-base">Git, Docker, Kubernetes, Jest, Enzyme, Agile, Scrum, CI/CD</p>
+                        <h3 class="text-lg sm:text-xl font-medium text-gray-900 mb-1">Other</h3>
+                        <p class="text-gray-700 text-sm sm:text-base">Git, Docker, NGINX</p>
                     </div>
                 </div>
             </section>
 
             <!-- Projects Section -->
-            <section id="projects" class="mb-8 pb-6 border-b border-gray-200">
+            <!-- <section id="projects" class="mb-8 pb-6 border-b border-gray-200">
                 <h2 class="text-2xl sm:text-3xl font-semibold text-blue-700 mb-4 pb-2 border-b-2 border-blue-200">Projects</h2>
                 <article class="mb-6 last:mb-0 p-4 bg-gray-50 rounded-lg shadow-sm hover:shadow-md transition-shadow duration-200">
                     <h3 class="text-xl sm:text-2xl font-semibold text-gray-900">E-commerce Platform Redesign</h3>
@@ -145,21 +137,21 @@
                     <p class="text-gray-600 text-xs sm:text-sm mb-2"><strong>Technologies:</strong> Node.js, Express, Socket.io, MongoDB</p>
                     <p><a href="https://github.com/johndoe/chat-app" target="_blank" class="text-blue-600 hover:underline text-sm sm:text-base">View on GitHub</a></p>
                 </article>
-            </section>
+            </section> -->
 
             <!-- Awards & Certifications Section -->
-            <section id="awards">
+            <!-- <section id="awards">
                 <h2 class="text-2xl sm:text-3xl font-semibold text-blue-700 mb-4 pb-2 border-b-2 border-blue-200">Awards & Certifications</h2>
                 <ul class="list-disc list-inside space-y-2 text-gray-700 text-sm sm:text-base">
                     <li>AWS Certified Solutions Architect – Associate (2023)</li>
                     <li>Dean's List, University of Technology (2017, 2018)</li>
                 </ul>
-            </section>
+            </section> -->
         </main>
 
         <!-- Footer Section -->
         <footer class="bg-gray-800 text-white p-6 text-center text-sm rounded-b-xl">
-            <p>&copy; 2025 John Doe. All rights reserved.</p>
+            <p>&copy; 2025 Hannes Månsson. All rights reserved.</p>
         </footer>
     </div>
 </body>
